--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.16",
+    "cssnano": "^7.0.6",
     "eslint": "^8.56.0",
     "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-vue": "^9.19.2",
     "npm-run-all2": "^6.1.1",
-    "postcss": "^8.4.32",
+    "postcss": "^8.5.2",
     "prettier": "^3.1.1",
     "tailwindcss": "^3.4.0",
     "typescript": "~5.3.3",
