--- a/nginx.conf
+++ b/nginx.conf
@@ -10,6 +10,15 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    # API代理到后端服务
+    location /api/ {
+        proxy_pass http://icm-backend:8080/api/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # 静态资源缓存
     location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
         root /usr/share/nginx/html;
